--- a/AppBlazor.Client/Components/Libro/ListLibro.razor
+++ b/AppBlazor.Client/Components/Libro/ListLibro.razor
@@ -82,7 +82,7 @@
     }
     public async Task eliminarLibro(int idLibro)
     {
-        libroService.eliminarLibro(idLibro);
+        await libroService.eliminarLibro(idLibro);
         await listarLibros();
 
     }
