--- a/AppBlazor.Client/Components/Libro/FormLibro.razor
+++ b/AppBlazor.Client/Components/Libro/FormLibro.razor
@@ -20,6 +20,20 @@
     </div>
 
     <div class="mt-3">
+        <label>Nro. Paginas</label>
+        <InputNumber class="form-control" @bind-Value="oLibroFormCLS.numeropaginas" />
+        <ValidationMessage For="(() => oLibroFormCLS.numeropaginas)" />
+
+    </div>
+
+    <div class="mt-3">
+        <label>Stock</label>
+        <InputNumber class="form-control" @bind-Value="oLibroFormCLS.stock" />
+        <ValidationMessage For="(() => oLibroFormCLS.stock)" />
+
+    </div>
+
+    <div class="mt-3">
         <label>Seleccione tipo de libro</label>
         <InputSelect class="form-control" @bind-Value="oLibroFormCLS.idtipolibro">
             <option value="0">--Seleccione--</option>
@@ -141,9 +155,9 @@
         }
     }
 
-    private void guardar()
+    private async Task guardar()
     {
-        libroService.guardarLibro(oLibroFormCLS);
+        await libroService.guardarLibro(oLibroFormCLS);
         navigatorManager.NavigateTo("libro");
     }
 
