--- a/AppBlazor.Client/_Imports.razor
+++ b/AppBlazor.Client/_Imports.razor
@@ -13,3 +13,4 @@
 @using AppBlazor.Entities
 @using AppBlazor.Client.Components.Libro
 @using AppBlazor.Client.Services
+@using AppBlazor.Client.Components.Galeria
