--- a/AppBlazor.Client/Components/Libro/ListLibro.razor
+++ b/AppBlazor.Client/Components/Libro/ListLibro.razor
@@ -1,6 +1,7 @@
 ﻿@inject NavigationManager navigationManager
 @inject LibroService libroService
 @inject IJSRuntime JS
+@inject UtilService utilService
 
 @if (lista != null && lista.Count != 0)
 
@@ -23,13 +24,13 @@
             {
                 <tr>
                     <td>
-                        <img width="50" height="50" src="@obtenerImagen(item.imagen)" />
+                        <img width="50" height="50" src="@utilService.obtenerImagen(item.imagen)" />
                     </td>
                     <td>@item.idlibro</td>
                     <td>@item.titulo</td>
                     <td>@item.nombretipolibro</td>
                     <td>@item.nombrearchivo</td>
-                    <td><p @onclick="(() => descargar(item.idlibro, item.nombrearchivo))" style="cursor:pointer; text-decoration:underline">@item.nombrearchivo </p></td>
+                    <td><p @onclick="(() => libroService.descargar(item.idlibro, item.nombrearchivo))" style="cursor:pointer; text-decoration:underline">@item.nombrearchivo </p></td>
                     <td>
                         <button class="btn btn-primary" @onclick="(() => recuperarLibro(item.idlibro))">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen-fill" viewBox="0 0 16 16">
@@ -54,25 +55,7 @@
 @code
 {
     public List<LibroListCLS> lista { get; set; } = new List<LibroListCLS>();
-    private async Task descargar(int idlibro, string nombrearchivo)
-    {
-        string archivo = await libroService.recuperaArchivoPorId(idlibro);
-        if (archivo != null && archivo.Length > 0)
-        {
-            await JS.InvokeVoidAsync("descargarArchivo", archivo, nombrearchivo);
-        }
-    }
-    private string obtenerImagen(byte[]? buffer)
-    {
-        if (buffer == null)
-        {
-            return "img/istockphoto-1186065957-612x612.jpg";
-        }
-        else
-        {
-            return "data:image/jpg;base64," + Convert.ToBase64String(buffer);
-        }
-    }
+   
     private void recuperarLibro(int idLibro)
 
     {
@@ -82,7 +65,7 @@
     }
     public async Task eliminarLibro(int idLibro)
     {
-        libroService.eliminarLibro(idLibro);
+        await libroService.eliminarLibro(idLibro);
         await listarLibros();
 
     }
