--- a/AppBlazor.Client/Layout/NavMenu.razor
+++ b/AppBlazor.Client/Layout/NavMenu.razor
@@ -10,13 +10,13 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="libro">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Libro
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="galeria" Match="NavLinkMatch.All">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Galeria
             </NavLink>
         </div>
         <div class="nav-item px-3">
